ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes
2011-08-31 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a bug when the input paraver trace has overlapped states
	running and different from running that made the parser miss data
	from events in the overlapping time

2011-08-10 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Modification of the CGAL detection part of the building system to 
	ease the configuration/compilation

	* New features in 'libDistributedClustering' library so as to refine
	the Tree Based DBSCAN.

	* Also added a consult method to retrieve all information to start the
	cross-process analysis (LLNL)
	

2011-08-05 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Fixed regressions in the implementation of MUSTER interface

	* Fixed bug that prevented to compile 'SequenceScore' due to 
	SeqAn type difinitions

2011-08-04 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Fixed regressions in the implementation of 'libDistributedClustering'

2011-08-03 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Corrected a bug in the building system that prevented to compile
	the CGAL support properly

	* Version renamed to 2.1

2011-07-13 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added clusters merge using last partition sequences on aggregative
	refinement

	* Solved a bug when generating the partition using the sequences merge

	* THIS VERSION WAS USED IN THE ICPADS PAPER *

2011-05-21 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a bug when renaming nodes that didn't expand

2011-05-16 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added copy of input .row files when clustering Paraver traces

	* Changed SVN keywords. Added 'Id'

	* Workaround to parse traces with incoherent number of communicators

	* Build SVN numbering changed again :D
